--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dslist
-spring.datasource.username=root
-spring.datasource.password=mydatabase123
+spring.datasource.url=jdbc:mysql://localhost:3306/(secret)
+spring.datasource.username=(secret)
+spring.datasource.password=(secret)
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
